--- a/UI/contactly.web/src/app/app.component.html
+++ b/UI/contactly.web/src/app/app.component.html
@@ -14,6 +14,7 @@
               <span class="font-light">{{item.name}}</span>
               <div>
                 <span>
+                  <i class="bi bi-envelope-fill"></i> 
                   <span>{{item.email}}</span>
                 </span>
               </div>
