frontend little updates

--- a/UI/contactly.web/src/app/app.component.html
+++ b/UI/contactly.web/src/app/app.component.html
@@ -1,34 +1,47 @@
-<div class="flex h-screen">
-  <div class="w-50">
+<div class="container-fluid h-100">
+  <div class="row h-100">
+    <!-- Left Section -->
+    <div class="col-md-6 bg-light">
+      <!-- Add content for the left side here if needed -->
+    </div>
 
-  </div>
-  <div class="overflow-auto w-50">
-    @if (contacts$ | async; as contacts)
-  {
-    @if(contacts.length>0){
+    <!-- Right Section -->
+    <div class="col-md-6 overflow-auto">
+      @if (contacts$ | async; as contacts)
+      {
+        @if(contacts.length > 0) {
+          <ul>
+            @for (item of contacts; track $index) {
+              <li class="p-2 bg-light border-b-2 border-white text-black">
+                <span class="font-light">{{ item.name }}</span>
+                <div class="d-flex justify-content-between align-items-center mt-2">
+                  <!-- Email Section -->
+                  <span class="d-flex align-items-center">
+                    <i class="bi bi-envelope-fill me-2"></i>
+                    <span>{{ item.email }}</span>
+                  </span>
 
-      
-        <ul>
-          @for (item of contacts; track $index) {
-            <li class="p-2 bg-primary border-b-2 border-white text-white">
-              <span class="font-light">{{item.name}}</span>
-              <div>
-                <span>
-                  <i class="bi bi-envelope-fill"></i> 
-                  <span>{{item.email}}</span>
-                </span>
-              </div>
-              <span>{{item.phone}}</span>
-            </li>
-          }
-        </ul>
-      
-    }@else{
-      <p>no contacts found...</p>
-    }
-}
+                  <!-- Phone Section -->
+                  <span class="d-flex align-items-center">
+                    <i class="bi bi-telephone-fill me-2"></i>
+                    <span>{{ item.phone }}</span>
+                  </span>
+                </div>
+                <div class="mt-4 d-flex w-full">
+                  <a class="bg-success py-1 px-2 cursor-pointer" href="{{'tel:' + item.phone}}">
+                    <i class="bi bi-telephone-fill me-2"></i>
+                  </a>
+                  <button class="btn btn-light text-dark py-2 px-4" type="button"> 
+                    <i class="bi bi-trash-fill text-danger me-2"></i> <!-- Delete Icon -->
+                  </button>
+                </div>
+              </li>
+            }
+          </ul>
+        } @else {
+          <p>No contacts found...</p>
+        }
+      }
+    </div>
   </div>
 </div>
-
-
-
