--- a/UI/contactly.web/src/app/app.component.html
+++ b/UI/contactly.web/src/app/app.component.html
@@ -2,7 +2,32 @@
   <div class="row h-100">
     <!-- Left Section -->
     <div class="col-md-6 bg-light">
-      <!-- Add content for the left side here if needed -->
+      <form (ngSubmit)="onFormSubmit()" [formGroup]="contactsForm">
+        <h1 class="py-10 bold">Contactly</h1>
+        <div>
+          <div class="form-group">
+            <label for="name" class="bold">Name</label>
+            <input type="text" class="form-control" formControlName="name" placeholder="Name" />
+          </div>
+          <div class="form-group">
+            <label for="name" class="bold">Email</label>
+            <input type="email" class="form-control" formControlName="email" placeholder="Email" />
+          </div>
+          <div class="form-group">
+            <label for="name" class="bold">Phone</label>
+            <input type="tel" class="form-control" formControlName="phone" placeholder="Phone" />
+          </div>
+          <div class="form-group">
+            <label for="favorite" class="bold">
+              <input type="checkbox" class="form-control" formControlName="favorite"/>
+              <span>Favorite</span>
+            </label>
+          </div>
+          <div class="form-group">
+            <button class="btn btn-primary" type="submit">Add Contact</button>
+        </div>
+      </div>
+      </form>
     </div>
 
     <!-- Right Section -->
