--- a/UI/contactly.web/src/app/app.component.html
+++ b/UI/contactly.web/src/app/app.component.html
@@ -56,7 +56,7 @@
                   <a class="bg-success py-1 px-2 cursor-pointer" href="{{'tel:' + item.phone}}">
                     <i class="bi bi-telephone-fill me-2"></i>
                   </a>
-                  <button class="btn btn-light text-dark py-2 px-4" type="button"> 
+                  <button class="btn btn-light text-dark py-2 px-4" type="button" (click)="onDelete(item.id)"> 
                     <i class="bi bi-trash-fill text-danger me-2"></i> <!-- Delete Icon -->
                   </button>
                 </div>
