--- a/UI/contactly.web/src/app/app.component.html
+++ b/UI/contactly.web/src/app/app.component.html
@@ -18,11 +18,19 @@
             <input type="tel" class="form-control" formControlName="phone" placeholder="Phone" />
           </div>
           <div class="form-group">
-            <label for="favorite" class="bold">
-              <input type="checkbox" class="form-control" formControlName="favorite"/>
-              <span>Favorite</span>
-            </label>
+            <div class="form-check">
+              <input 
+                type="checkbox" 
+                class="form-check-input" 
+                id="favorite" 
+                formControlName="favorite" 
+              />
+              <label for="favorite" class="form-check-label">
+                Favorite
+              </label>
+            </div>
           </div>
+          
           <div class="form-group">
             <button class="btn btn-primary" type="submit">Add Contact</button>
         </div>
